force-app/main/default/objects/MIP_Rebate_Distribution__mdt/MIP_Rebate_Distribution__mdt.object-meta.xml
<CustomObject>
    <label>MIP Rebate Distribution %</label>
    <pluralLabel>MIP Rebate Distributions</pluralLabel>
</CustomObject>