force-app/main/default/objects/MIP_Rebate_Distribution__mdt/fields/Baseline_Percent__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Percent__c</fullName>
    <label>Baseline %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>