force-app/main/default/objects/MIP_Rebate_Distribution__mdt/fields/Rebate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Type__c</fullName>
    <label>Rebate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concierge</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Concierge PSNL Only</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
                <isActive>false</isActive>
                <label>Special</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>