force-app/main/default/objects/MIP_Rebate_Distribution__mdt/fields/Tier_2__c.field-meta.xml
<CustomField>
    <fullName>Tier_2__c</fullName>
    <label>Tier 2 %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>