force-app/main/default/objects/MIP_Rebate_Distribution__mdt/listViews/Rebate_Distri.listView-meta.xml
<ListView>
    <fullName>Rebate_Distri</fullName>
    <columns>MasterLabel</columns>
    <columns>Rebate_Type__c</columns>
    <columns>Baseline_Percent__c</columns>
    <columns>Tier_1__c</columns>
    <columns>Tier_2__c</columns>
    <columns>Tier_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>Rebate Distri</label>
</ListView>